feat: update get all, create new customer, swagger
